--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
                                    <h1>copo da felicidadel</h1>
 
-<h1>O copo da felicidade e uma deliciosa sobremesa quevem ganhando cada vez mai popularidade nos ultimos anos.
-essa sobremesa é composta por varias camadas de diferente igredientes,como bolacha, doces, frutas, e tudo isso dentro
-de um copo os sabores mais populares incluem banoffe ninho com nutella chocolatudo e oreo, e cada um oferecendo uma experiencia unica e deliciosa.
- com sua aparencia colorida e atrativa, o copo a felicidade e uma otima opção para apresentar alguem ou simplesmente para desfrutar em um momento d sobremesa
- com amigos e familiares. com seus diversos sabores essa sobremesa pode agradar a todos os gosto e a opção versatil para qualquer ocasião.  
+<h2>O copo da felicidade e uma deliciosa sobremesa quevem ganhando cada vez mai popularidade nos ultimos anos</h2>
+<p>essa sobremesa é composta por varias camadas de diferente igredientes,como bolacha, doces, frutas, e tudo isso dentro</p.>
+<p>de um copo os sabores mais populares incluem banoffe ninho com nutella chocolatudo e oreo, e cada um oferecendo uma experiencia unica e deliciosa.</p>
+<p>com sua aparencia colorida e atrativa, o copo a felicidade e uma otima opção para apresentar alguem ou simplesmente para desfrutar em um momento d sobremesa</p>
+ <p>com amigos e familiares. com seus diversos sabores essa sobremesa pode agradar a todos os gosto e a opção versatil para qualquer ocasião.</p>  
